[package]
name = "tun-tap"
edition = "2024"
version = "0.2.0"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
description = "TUN/TAP interface wrapper"
documentation = "https://docs.rs/tun-tap"
repository = "https://github.com/vorner/tuntap"
readme = "README.md"
keywords = ["tun", "tap", "network"]
categories = ["network-programming"]
license = "Apache-2.0/MIT"

[features]
default = ["tokio"]
tokio = ["dep:tokio", "dep:libc", "libc"]
libc = ["dep:libc"]

[dependencies]
libc = { version = "0.2", optional = true }
tokio = { version = "1", features = ["net", "rt", "rt-multi-thread", "io-util", "macros", "time"], optional = true }

[build-dependencies]
cc = "1"

[dev-dependencies]
etherparse = "0.17"
serial_test = "3"
